# fortran-s3-accessor

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMMANDS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  fpm.toml  namelist.data
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  netcdf-example.yml  release.yml
app/: auth_demo.f90  error_demo.f90  file_download_demo.f90  main.f90  progress_demo.f90  s3_netcdf_example.f90  test_minio.f90  test_simple.f90  test_streaming.f90
docs/: README.md  ford.md
docs/pages/: examples.md
examples/: byte_range_demo.f90  netcdf_minimal.f90
examples/data/: foo.nc
examples/netcdf/: fpm.toml  s3_netcdf_example.f90
examples/netcdf/python/: read_s3_netcdf.py  requirements.txt
src/: aws_auth.f90  curl_stream.f90  fortran-s3-accessor.f90  libcurl_bindings.f90  openssl_bindings.f90  s3_backend_mod.f90  s3_backend_selector_mod.f90  s3_config_mod.f90  s3_errors.f90  s3_file_ops_mod.f90  s3_http.f90  s3_http_backend_mod.f90  s3_interface_mod.f90  s3_io.f90  s3_logger.f90  s3_multipart.f90  version_mod.f90.in
test/: test_aws_auth.f90  test_basic.f90  test_byte_range.f90  test_curl_minimal_standalone.f90  test_math.f90  test_s3_environment.f90  test_s3_errors.f90  test_s3_http.f90  test_uninitialized.f90  test_uninitialized_cases.f90
test/data/: sample_object.txt
test/data/responses/: error_403_access_denied.xml  error_403_signature_mismatch.xml  error_404_nosuchkey.xml  large_content.txt  malformed.xml  nosuchkey.xml  special%20chars%20test.txt  test_object.txt
test/scripts/: README.md  curl  curl.bat
